# DEM-Engine

./: CMakeLists.txt
data/clumps/: TO_bottom_plate_20_percent.csv  TO_bottom_plate_50_percent.csv  bottom_plate_25mm_one_hole.csv  bottom_plate_8mm.csv  bottom_plate_9mm.csv  tpms_tiled_density_50.csv  tpms_tiled_density_70.csv  tpms_unit_cell.csv  validation_bottom_plate_15e-1mm.csv  validation_bottom_plate_175e-2mm.csv  validation_bottom_plate_2mm.csv  validation_bottom_plate_4mm.csv  validation_bottom_plate_5mm.csv  validation_bottom_plate_6mm.csv  validation_bottom_plate_7mm.csv  validation_bottom_plate_8mm.csv  xyz.csv
data/sim_data/: pin_pos.csv  pin_pos_run0.csv  pin_pos_run17.csv  pin_pos_run4.csv
kernel/DEMUserScripts/: ForceModelWithTemperature.cu
scripts/: render.py  run_render.sh
src/DEM/: API.h  APIPublic.cpp
src/demo/: CMakeLists.txt  DEM_phx_discharge.cpp  DEM_phx_mesh_pins.cpp  DEM_phx_periodic.cpp  DEM_phx_periodic_cyl.cpp  DEM_phx_periodic_temp.cpp  DEM_phx_setup.cpp  DEM_phx_temp_runs.cpp  DEM_temp.cpp  DEM_tpms.cpp  DEMdemo_GRCPrep_Part1.cpp  DEMdemo_GRCSimplifiedPrep_Part1.cpp  DEMdemo_Goldenberg.cpp  SingleWheelTest.cpp  rassor_single_drum.cpp
src/phx_tests/: CMakeLists.txt  TO_design_discharge.cpp  TO_design_setup.cpp  phx_discharge.cpp  phx_mesh_pins.cpp  phx_periodic.cpp  phx_periodic_cyl.cpp  phx_periodic_temp.cpp  phx_setup.cpp  phx_setup_temp.cpp  phx_temp_debug.cpp  phx_temp_runs.cpp  phx_temp_validation.cpp  phx_temp_validation_full_teardrop.cpp  phx_temp_validation_no_pins.cpp  temp.cpp  tpms.cpp
src/phx_tests/include/: heat_exchanger_util.h
